強制執行法 2011.6.7

--- a/司法-民事/強制執行法.md
+++ b/司法-民事/強制執行法.md
@@ -54,17 +54,21 @@
 
 * 19 執行法院對於強制執行事件，認有調查之必要時，得命債權人查報，或依職權調查之。執行法院得向稅捐及其他有關機關、團體或知悉債務人財產之人調查債務人財產狀況，受調查者不得拒絕。但受調查者為個人時，如有正當理由，不在此限。
 
-* 20 已發見之債務人財產不足抵償聲請強制執行債權或不能發現債務人應交付之財產時，執行法院得依職權或依聲請，定期間命債務人據實報告該期間屆滿前一年內應供強制執行之財產狀況。
+* 20 已發見之債務人財產不足抵償聲請強制執行債權或不能發現債務人應交付之財產時，執行法院得依債權人聲請或依職權，定期間命債務人據實報告該期間屆滿前一年內應供強制執行之財產狀況。債務人違反前項規定，不為報告或為虛偽之報告，執行法院得依債權人聲請或依職權命其提供擔保或限期履行執行債務。債務人未依前項命令提供相當擔保或遵期履行者，執行法院得依債權人聲請或依職權管收債務人。但未經訊問債務人，並認其非不能報告財產狀況者，不得為之。
 
-> 釋：配合本法第十九條第一項既許執行法院得依職權調查債務人財產狀況，予以修正。
+> 釋：一、債權人聲請執行法院命債務人報告財產狀況，執行法院經審酌符合第一項要件時，即應命債務人報告該期間屆滿前一年內財產狀況，以賦予債權人財產開示請求權，並助益執行債權之滿足，爰修正第一項。二、第二項規定由原條文第二十二條第一項第五款、第二項移列修正。債務人可履行報告義務而違反第一項規定，不為報告或為虛偽之報告，為促使債務人履行報告義務，及使債權人債權獲得滿足，爰將原條文第二十二條第一項第五款「違反第二十條之規定，不為報告或為虛偽之報告者」及第二十二條第二項「執行法院得命債務人提供擔保」修正為「債務人違反前項規定，不為報告或為虛偽之報告，執行法院得依債權人聲請或依職權命其提供擔保或限期履行執行債務」。三、第三項規定由原條文第二十二條第二項移列修正。債務人未依第二項命令提供相當擔保或遵期履行，如無其他間接執行方法，宜使執行法院得依債權人聲請或依職權管收債務人，以利債權人實現其債權。惟因管收係限制債務人人身自由，宜慎重為之，執行法院於管收前，應使債務人有陳述意見之機會，以保障其權益，爰將原條文第二十二條第二項「前項情形，執行法院得命債務人提供擔保，無相當擔保者，管收之。」修正為「債務人未依前項命令提供相當擔保或遵期履行者，執行法院得依債權人聲請或依職權管收債務人。但未經訊問債務人，並認其非不能報告財產狀況者，不得為之。」
 
-* 21 債務人受合法通知，無正當理由而不到場者，執行法院得拘提之。
+* 21 債務人有下列情形之一，而有強制其到場之必要者，執行法院得拘提之：一、經合法通知，無正當理由而不到場。二、有事實足認為有逃匿之虞。債務人有前項情形者，司法事務官得報請執行法院拘提之。債務人經拘提到場者，執行法院得交由司法事務官即時詢問之。司法事務官於詢問後，應向執行法院提出書面報告。
+
+> 釋：一、參酌司法院釋字第五八八號解釋意旨，執行法院不得同時併為拘提、管收之裁定，且於管收前應踐行訊問程序，以符正當法律程序，爰於第一項明定拘提之要件；至管收之要件及程序則於第二十二條修正規定之。二、第一項規定由原條文及第二十二條第一項第二款移列修正。三、依法院組織法第十七條之二第一項第二款及本法第三條第二項規定，拘提係專屬執行法院之權限，司法事務官辦理強制執行事件之事項，不包含拘提。而債務人是否有第一項情形，負責辦理強制執行事件之司法事務官較為知悉，若債務人有第一項情形，應許司法事務官得報請執行法院發動職權拘提債務人，爰增訂第二項。四、依第二十二條之五準用刑事訴訟法第九十三條第一項規定，債務人經拘提到場，應由執行法院即時訊問之，由於強制執行事件已交由司法事務官辦理，有關執行事件進行情況，司法事務官知之甚稔，執行法院參酌實際情形，自得將經拘提到場之債務人交由司法事務官即時詢問之，爰增訂第三項。五、司法事務官於詢問債務人後，應就有無管收必要之事實、理由及法律依據載明於報告書，向執行法院提出，爰增訂第四項。
 
 * 21.1 拘提，應用拘票。拘票應記載左列事項，由執行法官簽名：一、應拘提人姓名、性別、年齡、出生地及住所或居所，有必要時，應記載其足資辨別之特徵。但年齡、出生地、住所或居所不明者，得免記載。二、案由。三、拘提之理由。四、應到之日、時及處所。
 
 * 21.2 拘提，由執達員執行。
 
-* 22 債務人有左列情形之一者，執行法院得拘提之：一、顯有履行義務之可能故不履行者。二、顯有逃匿之虞者。三、就應供強制執行之財產有隱匿或處分之情事者。四、於調查執行標的物時，對於法官或書記官拒絕陳述者。五、違反第二十條之規定，不為報告或為虛偽之報告者。前項情形，執行法院得命債務人提供擔保，無相當擔保者，管收之。其非經拘提到場者亦同。第一項各款情形，必要時，執行法院得依職權或依聲請，限制債務人住居於一定之地域，但已提供相當擔保者，應解除其限制。前項限制住居，應通知債務人及有關機關。
+* 22 債務人有下列情形之一者，執行法院得依債權人聲請或依職權命其提供擔保或限期履行：一、有事實足認顯有履行義務之可能故不履行。二、就應供強制執行之財產有隱匿或處分之情事。債務人有前項各款情形之一，而有事實足認顯有逃匿之虞或其他必要事由者，執行法院得依債權人聲請或依職權，限制債務人住居於一定之地域。但債務人已提供相當擔保、限制住居原因消滅或執行完結者，應解除其限制。前項限制住居及其解除，應通知債務人及有關機關。債務人無正當理由違反第二項限制住居命令者，執行法院得拘提之。債務人未依第一項命令提供相當擔保、遵期履行或無正當理由違反第二項限制住居命令者，執行法院得依債權人聲請或依職權管收債務人。但未經訊問債務人，並認非予管收，顯難進行強制執行程序者，不得為之。債務人經拘提、通知或自行到場，司法事務官於詢問後，認有前項事由，而有管收之必要者，應報請執行法院依前項規定辦理。
+
+> 釋：一、原條文第一項各款拘提事由，其中第二款移列修正為第二十一條第一項第二款，其餘各款拘提事由，參酌司法院釋字第五八八號解釋意旨，有逾越必要程度之虞，爰將本項刪除。二、第一項規定由原條文第二項關於命供擔保部分移列修正。原條文命供擔保之事由，其中第五款移列修正為第二十條第二項，爰予刪除。命供擔保之目的係促使債務人履行債務，應以債務人有履行義務之可能，始有命供擔保之必要，爰就原條文命供擔保事由，保留第一款、第三款，刪除第二款、第四款，並增訂符合命供擔保之情形亦得命限期履行。三、第二項規定由原條文第三項移列修正。限制住居係限制人身自由，應於債務人有履行義務之可能，並有事實足認顯有逃匿之虞或其他必要事由時，始得為之。爰就原條文命限制住居事由，保留第一款、第三款，刪除第二款、第四款及第五款。如債務人已提供相當擔保、限制住居原因消滅或執行完結，自應解除其限制，爰修正但書規定。四、第三項規定由原條文第四項移列修正。限制住居及解除限制住居，均應通知債務人及有關機關，爰將原條文「前項限制住居」，修正為「前項限制住居及其解除」，以臻明確。五、債務人無正當理由違反限制住居命令者，宜使執行法院得將其拘提到院，爰增訂第四項。六、第五項關於債務人違反供擔保執行命令得予管收之規定由原條文第二項管收部分移列修正，債務人違反遵期履行執行命令與違反供擔保執行命令情節相當，故違反遵期履行命令者，亦得管收之。又命限制住居之要件較命供擔保或限期履行之要件為嚴格，債務人違反限制住居之命令，執行法院應得管收之。管收係限制債務人之人身自由，執行法院於管收前，應使債務人有陳述意見之機會，並參酌強制執行進行情形、債務人整體收入、財產狀況及工作能力，於認債務人有履行執行債務之可能，而非予管收，顯難進行強制執行程序時，得予管收之。另是否拘提到場並非管收之要件，原條文第二項「其非經拘提到場者亦同。」之文字，爰刪除之。七、依法院組織法第十七條之二第一項第二款及本法第三條第二項規定，管收係專屬執行法院之權限，司法事務官辦理強制執行事件之事項，不包含管收。而債務人是否符合管收要件，負責辦理強制執行事件之司法事務官較為知悉，若債務人符合管收要件，應許司法事務官得報請執行法院依第五項規定管收債務人，爰增訂第六項。
 
 * 22.1 管收，應用管收票。管收票，應記載左列事項，由執行法官簽名：一、應管收人之姓名、性別、年齡、出生地及住所或居所，有必要時，應記載其足資辨別之特徵。二、案由。三、管收之理由。
 
@@ -76,13 +80,15 @@
 
 * 22.5 拘提、管收，除本法別有規定外，準用刑事訴訟法關於拘提、羈押之規定。
 
-* 23 債務人依第二十二條第二項、第三項及第二十二條之四第二款提供之擔保，執行法院得許由該管區域內有資產之人具保證書代之。前項具保證書人，如於保證書載明債務人逃亡或不履行義務時，由其負責清償或賠償一定之金額者，執行法院得因債權人之聲請，逕向具保證書人為強制執行。
+* 23 債務人依第二十條第二項、第二十二條第一項、第二項及第二十二條之四第二款提供之擔保，執行法院得許由該管區域內有資產之人具保證書代之。前項具保證書人，如於保證書載明債務人逃亡或不履行義務時，由其負責清償或賠償一定之金額者，執行法院得因債權人之聲請，逕向具保證書人為強制執行。
+
+> 釋：一、配合修正條文第二十條第二項、第二十二條第一項、第二項之規定，修正債務人提供擔保規定之條次，爰修正第一項。二、第二項未修正。
 
 * 24 管收期限不得逾三個月。有管收新原因發生時，對於債務人仍得再行管收，但以一次為限。
 
-* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。關於債務人拘提、管收、限制住居及應負義務之規定，於左列各款之人亦適用之：一、債務人為無行為能力人或限制行為能力人者，其法定代理人。二、債務人失蹤者，其財產管理人。三、債務人死亡者，其繼承人、遺產管理人、遺囑執行人或特別代理人。四、法人或非法人團體之負責人、獨資商號之經理人。前項各款之人，於喪失資格或解任前，具有報告之義務或拘提、管收、限制住居之原因者，在喪失資格或解任後，於執行必要範圍內，仍得命其報告或予拘提、管收、限制住居。
+* 25 債務人履行債務之義務，不因債務人或依本法得管收之人被管收而免除。關於債務人拘提、管收、限制住居、報告及其他應負義務之規定，於下列各款之人亦適用之：一、債務人為無行為能力人或限制行為能力人者，其法定代理人。二、債務人失蹤者，其財產管理人。三、債務人死亡者，其繼承人、遺產管理人、遺囑執行人或特別代理人。四、法人或非法人團體之負責人、獨資商號之經理人。前項各款之人，於喪失資格或解任前，具有報告及其他應負義務或拘提、管收、限制住居之原因者，在喪失資格或解任後，於執行必要範圍內，仍得命其履行義務或予拘提、管收、限制住居。
 
-> 釋：為保障債權人私權之實現，強制債務人履行債務，執行法院除能對債務人拘提管收外，亦得予限制住居，現行條文將「限制住居」之規定漏列，爰於第二項及第三項之「拘提、管收」後增訂「限制住居」，並於第三項句末「或」後增列「予」，刪除「之」字，以期周全。
+> 釋：一、第一項未修正。二、第二項所定「左列」二字，配合現行法制用語修正為「下列」。三、債務人依本法所負義務有第二十條之報告義務、第七十七條之一第一項之陳述義務、提出文書義務及第七十八條之保管義務等，為明確準債務人所負義務之範圍，爰修正第二項、第三項。
 
 * 26 管收所之設置及管理，以法律定之。
 
@@ -94,7 +100,13 @@
 
 * 28.1 強制執行程序如有左列情形之一，致不能進行時，執行法院得以裁定駁回其強制執行之聲請，並於裁定確定後，撤銷已為之執行處分：一、債權人於執行程序中應為一定必要之行為，無正當理由而不為，經執行法院再定期限命為該行為，無正當理由逾期仍不為者。二、執行法院命債權人於相當期限內預納必要之執行費用而不預納者。
 
-* 28.2 民事強制執行，其執行標的金額或價額未滿新臺幣五千元者，免徵執行費；新臺幣五千元以上者，每百元徵收七角，其畸零之數不滿百元者，以百元計算。前項規定，於聲明參與分配者，適用之。執行非財產案件，徵收執行費新臺幣三千元。執行人員之食、宿、舟、車費，不另徵收。關於強制執行費用，本法未規定者，準用民事訴訟費用有關之規定。
+* 28.2 民事強制執行，其執行標的金額或價額未滿新臺幣五千元者，免徵執行費；新臺幣五千元以上者，每百元收七角，其畸零之數不滿百元者，以百元計算。前項規定，於聲明參與分配者，適用之。執行非財產案件，徵收執行費新臺幣三千元。法院依法科處罰鍰或怠金之執行，免徵執行費。法院依法徵收暫免繳納費用或國庫墊付款之執行，暫免繳執行費，由執行所得扣還之。執行人員之食、宿、舟、車費，不另徵收。
+
+> 釋：一、第一項至第三項未修正。二、法院依法科處罰鍰或怠金之執行，其執行費由國庫預納，執行後再繳回國庫，為簡化行政作業程序，明定此類事件免徵執行費，爰增訂第四項。三、法院依法徵收暫免繳納費用或國庫墊付款之執行，為避免國庫先行預納執行費，明定此類事件暫免繳執行費，待執行有效果時，再由執行所得扣還之，爰增訂第五項。四、第六項規定由原條文第四項移列。五、關於強制執行費用本法未規定者，依第三十條之一準用民事訴訟法有關訴訟費用之規定，為免重複規定，刪除原條文第五項規定。
+
+* 28.3 債權人聲請執行，依第二十七條第二項逕行發給憑證者，徵收執行費新臺幣一千元。但依前條第一項規定計算應徵收之執行費低於新臺幣一千元者，依該規定計算徵收之。債權人依前項憑證聲請執行，而依第二十七條第二項逕行發給憑證者，免徵執行費。債權人依前二項憑證聲請強制執行債務人財產者，應補徵收按前條第一項規定計算執行費之差額。
+
+> 釋：一、本條新增。二、如債務人現無財產可供執行，債權人為免其債權罹於消滅時效，而聲請執行並請求逕予發給憑證者，執行法院雖不必進行一般執行程序，惟仍須核發憑證，是仍應徵收執行費，為減輕債權人預納執行費之負擔，增訂此類事件徵收執行費一千元。如依第二十八條之二第一項規定計算應徵收之執行費低於一千元者，依該項規定計算徵收之，爰設第一項及但書規定。三、債權人持第一項憑證聲請執行，執行法院依第二十七條第二項規定逕行發給憑證者，因未實際執行債務人之財產，且債權人已依第一項規定繳納執行費，增訂免徵執行費，爰設第二項規定。四、債權人依第一項、第二項憑證聲請強制執行債務人財產者，應補徵收按第二十八條之二第一項規定計算執行費之差額，以維公允，爰設第三項規定。
 
 * 29 債權人因強制執行而支出之費用，得求償於債務人者，得準用民事訴訟法第九十一條之規定，向執行法院聲請確定其數額。前項費用及其他為債權人共同利益而支出之費用，得求償於債務人者，得就強制執行之財產先受清償。
 
@@ -216,9 +228,9 @@
 
 * 77 查封時，書記官應作成查封筆錄，載明左列事項：一、為查封原因之權利。二、不動產之所在地、種類、實際狀況、使用情形及其他應記明之事項。三、債權人及債務人。四、查封方法及其實施之年、月、日、時。五、查封之不動產有保管人者，其保管人。查封人員及保管人應於前項筆錄簽名，如有依第四十八條第二項規定之人員到場者，亦應簽名。
 
-* 77.1 執行法官或書記官，為調查不動產之實際狀況、占有使用情形或其他權利關係，得開啟門鎖進入不動產或訊問債務人或占有之第三人，並得命其提出有關文書。前項情形，債務人無正當理由拒絕陳述或提出文書，或為虛偽陳述或提出虛偽之文書者，準用第二十二條之規定。第三人有前項情形或拒絕到場者，執行法院得以裁定處新臺幣一萬五千元以下之罰鍰。前項裁定得為抗告，抗告中應停止執行。
+* 77.1 執行法官或書記官，為調查不動產之實際狀況，占有使用情形或其他權利關係，得開啟門鎖進入不動產或訊問債務人或占有之第三人，並得命其提出有關文書。前項情形，債務人無正當理由拒絕陳述或提出文書，或為虛偽陳述或提出虛偽之文書者，執行法院得依債權人聲請或依職權管收債務人。但未經訊問債務人，並認非予管收，顯難查明不動產狀況者，不得為之。第三人有前項情形或拒絕到場者，執行法院得以裁定處新臺幣一萬五千元以下之罰鍰。
 
-> 釋：為使執行法官或書記官徹底踐行不動產之現況調查權，提高不動產拍賣之競標人之購買意願，宜參考日本民事執行法第五十七條第三項規定，將現行條文第一項之「得訊問債務人或占有之第三人」修正為「得開啟門鎖進入不動產或訊問債務人或占有之第三人」，以資因應。
+> 釋：一、第一項、第三項未修正。二、債務人於執行法院為第一項調查不動產狀況時，不履行其陳述或提出文書義務，將影響執行法院定不動產之拍賣條件，為促使債務人履行上開義務，俾維護債權人權益，宜使執行法院得依債權人聲請或依職權管收債務人。惟管收係限制債務人人身自由，須經訊問債務人，並認非予管收，顯難查明不動產狀況者，始得為之，爰修正第二項。又本條係調查已查封之不動產狀況，故無於管收債務人前，先命其提供相當擔保或限期履行之必要，併此敘明。
 
 * 78 已查封之不動產，以債務人為保管人者，債務人仍得為從來之管理或使用。由債務人以外之人保管者，執行法院得許債務人於必要範圍內管理或使用之。
 
@@ -330,7 +342,9 @@
 
 * 121 債務人對於第三人之債權或其他財產權持有書據，執行法院命其交出而拒絕者，得將該書據取出，並得以公告宣示未交出之書據無效，另作證明書發給債權人。
 
-* 122 債務人對於第三人之債權，係維持債務人及其共同生活之親屬生活所必需者，不得為強制執行。
+* 122 債務人依法領取之社會福利津貼、社會救助或補助，不得為強制執行。債務人依法領取之社會保險給付或其對於第三人之債權，係維持債務人及其共同生活之親屬生活所必需者，不得為強制執行。
+
+> 釋：一、增訂第一項，第二項由原條文移列修正。二、債務人依法領取之社會福利津貼、社會救助或補助，多為政府照護社會弱勢族群之措施，俾維持其基本生活。各相關法規雖多明定依法請領各項現金給付或補助之權利，不得扣押、讓與或供擔保，但該等權利實現後，如仍予強制執行，有違政府發給之目的，宜明定債務人依法領取之該等津貼、救助或補助，不得為強制執行，爰增訂第一項。三、現行社會保險係指公教人員保險、勞工保險、軍人保險、農民保險及其他政府強制辦理之保險。債務人依法領取之社會保險給付，其金額多寡不一，如係維持債務人及其共同生活之親屬生活所必需者，宜明定不得為強制執行，爰修正第二項。
 
 * 122.1 關於金錢請求權之強制執行，債務人為中央或地方機關或依法為公法人者，適用本節之規定。但債務人為金融機構或其他無關人民生活必需之公用事業者，不在此限。第二十條至第二十五條之規定，於前項執行不適用之。
 
@@ -350,9 +364,13 @@
 
 * 127 依執行名義，債務人應為一定行為而不為者，執行法院得以債務人之費用，命第三人代為履行。前項費用，由執行法院酌定數額，命債務人預行支付或命債權人代為預納，必要時，並得命鑑定人鑑定其數額。
 
-* 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代為履行者，債務人不為履行時，執行法院得定債務人履行之期間。債務人不履行時，得拘提、管收之或處新臺幣三萬元以上三十萬元以下之怠金。其續經定期履行而仍不履行者，得再處怠金。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方法，將該子女或被誘人取交債權人。
+* 128 依執行名義，債務人應為一定之行為，而其行為非他人所能代履行者，債務人不為履行時，執行法院得定債務人履行之期間。債務人不履行時，得處新臺幣三萬元以上三十萬元以下之怠金。其續經定期履行而仍不履行者，得再處怠金或管收之。前項規定，於夫妻同居之判決不適用之。執行名義，係命債務人交出子女或被誘人者，除適用第一項規定外，得用直接強制方式，將該子女或被誘人取交債權人。
 
-* 129 執行名義係命債務人容忍他人之行為，或禁止債務人為一定之行為者，債務人不履行時，執行法院得拘提、管收之或處新臺幣三萬元以上三十萬元以下之怠金。其仍不履行時，亦同。前項情形，於必要時，並得因債權人之聲請，以債務人之費用，除去其行為之結果。依前項規定執行後，債務人復行違反時，執行法院得依聲請再為執行。前項再為執行，應徵執行費。
+> 釋：一、為保障人權，債務人未遵執行命令履行其不可代替行為義務時，仍應符合第二十一條之拘提事由，執行法院始得拘提債務人，爰刪除第一項關於拘提之規定。二、又管收係實現強制執行目的之最後方法，於管收前宜先處怠金以促債務人履行，續經定期履行而仍不履行，始許執行法院於符合管收要件時，予以管收，爰修正第一項關於管收之規定。三、第二項及第三項未修正。
+
+* 129 執行名義係命債務人容忍他人之行為，或禁止債務人為一定之行為者，債務人不履行時，執行法院得處新臺幣三萬元以上三十萬元以下之怠金。其仍不履行時，得再處怠金或管收之。前項情形，於必要時，並得因債權人之聲請，以債務人之費用，除去其行為之結果。依前項規定執行後，債務人復行違反時，執行法院得依聲請再為執行。前項再為執行，應徵執行費。
+
+> 釋：一、為保障人權，債務人未遵執行命令履行其不作為義務時，仍應符合第二十一條之拘提事由，執行法院始得拘提債務人，爰刪除第一項關於拘提之規定。二、又管收係實現強制執行目的之最後方法，於管收前宜先處怠金以促債務人履行，其仍不履行，始許執行法院於符合管收要件時，予以管收，爰修正第一項關於管收之規定。三、第二項至第四項未修正。
 
 * 129.1 債務人應為第一百二十八條第一項及前條第一項之行為或不行為者，執行法院得通知有關機關為適當之協助。
 
