--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -30,9 +30,9 @@
 
 > 釋：一、按公司法負責人為第一項規定之違法行為，自依該項規定受刑事制裁，至於公司與負責人之行為宜予區別，為考量公司已持續經營狀態，如驟以撤銷，對於社會交易相對人及債權人之保障，恐衍生另一問題，因此，於未確定判決前，給予公司補正資本之程序，爰增訂第三項但書。二、第三項後段規定移列為第四項，並酌作文字修正。
 
-* 10 公司有下列情事之一者，主管機關得依職權或利害關係人之申請，命令解散之：一、公司設立登記後六個月尚未開始營業。但已辦妥延展登記者，不在此限。二、開始營業後自行停止營業六個月以上。但已辦妥停業登記者，不在此限。三、公司名稱經法院判決確定不得使用，公司於判決確定後六個月內尚未辦妥名稱變更登記，並經主管機關令其限期辦理仍未辦妥。四、未於第七條第一項所定期限內，檢送經會計師查核簽證之文件者。但於主管機關命令解散前已檢送者，不在此限。
+* 10 公司有下列情事之一者，主管機關得依職權或利害關係人之申請，命令解散之：一、公司設立登記後六個月尚未開始營業者。但已辦妥延展登記者，不在此限。二、開始營業後自行停止營業六個月以上者。但已辦妥停業登記者，不在此限。三、公司名稱經法院判決確定不得使用，公司於判決確定後六個月內尚未辦妥名稱變更登記，並經主管機關令其限期辦理仍未辦妥。
 
-> 釋：一、序文配合法制用語，酌作文字修正。二、鑒於公司設立登記後，其資本額查核簽證之文件，依修正條文第七條第一項規定，固得於設立登記後三十日內檢送之，惟公司設立登記之資本額，仍應符合資本確實原則，以保障股東權益。對於公司未於修正條文第七條第一項所定期限內，檢送經會計師查核簽證之文件者，主管機關得依職權或利害關係人之申請，命令解散之；但於主管機關命令解散前，公司已檢送者，不在此限。爰增訂第四款。
+> 釋：一、序文之「左列」二字，依目前法制作業統一用語，修正為「下列」。二、公司名稱經法院判決確定不得再使用者，例如著名商標「XX」，被使用為公司名稱，經商標權人提起訴訟，法院判決XX 股份有限公司不得使用「XX」為其公司名稱。實務上，部分公司未依判決主文主動辦理名稱之變更，造成他人權益受損，爰增訂第三款，以六個月為期限，如逾期仍未辦理名稱變更登記，並經主管機關令其限期辦妥變更登記仍未完成者，主管機關得依職權或利害關係人之申請，命令解散之，俾藉此督促公司辦理名稱變更登記。
 
 * 11 公司之經營，有顯著困難或重大損害時，法院得據股東之聲請，於徵詢主管機關及目的事業中央主管機關意見，並通知公司提出答辯後，裁定解散。前項聲請，在股份有限公司，應有繼續六個月以上持有已發行股份總數百分之十以上股份之股東提出之。
 
@@ -484,15 +484,17 @@
 
 * 155 發起人對於公司設立事項，如有怠忽其任務致公司受損害時，應對公司負連帶賠償責任。發起人對於公司在設立登記前所負債務，在登記後亦負連帶責任。
 
-* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。公司得依董事會之決議，向證券管理機關申請辦理公開發行程序。但公營事業之公開發行，應由該公營事業之主管機關專案核定之。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術、商譽抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。公司設立後，為改善財務結構或回復正常營運，而參與政府專案核定之紓困方案時，得發行新股轉讓於政府，作為接受政府財務上協助之對價；其發行程序不受本法有關發行新股規定之限制，其相關辦法由中央主管機關定之。前項紓困方案達新臺幣十億元以上者，應由專案核定之主管機關會同受紓困之公司，向立法院報告其自救計畫。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
+* 156 股份有限公司之資本，應分為股份，每股金額應歸一律，一部分得為特別股；其種類，由章程定之。前項股份總數，得分次發行。公司得依董事會之決議，向證券主管機關申請辦理公開發行程序；申請停止公開發行者，應有代表已發行股份總數三分之二以上股東出席之股東會，以出席股東表決權過半數之同意行之。出席股東之股份總數不足前項定額者，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意行之。公開發行股票之公司已解散、他遷不明或因不可歸責於公司之事由，致無法履行證券交易法規定有關公開發行股票公司之義務時，證券主管機關得停止其公開發行。公營事業之申請辦理公開發行及停止公開發行，應先經該公營事業之主管機關專案核定。股東之出資除現金外，得以對公司所有之貨幣債權，或公司所需之技術抵充之；其抵充之數額需經董事會通過，不受第二百七十二條之限制。公司設立後得發行新股作為受讓他公司股份之對價，需經董事會三分之二以上董事出席，以出席董事過半數決議行之，不受第二百六十七條第一項至第三項之限制。公司設立後，為改善財務結構或回復正常營運，而參與政府專案核定之紓困方案時，得發行新股轉讓於政府，作為接受政府財務上協助之對價；其發行程序不受本法有關發行新股規定之限制，其相關辦法由中央主管機關定之。前項紓困方案達新臺幣十億元以上者，應由專案核定之主管機關會同受紓困之公司，向立法院報告其自救計畫。同次發行之股份，其發行條件相同者，價格應歸一律。但公開發行股票之公司，其股票發行價格之決定方法，得由證券主管機關另定之。
 
-> 釋：一、原條文第一項及第二項未修正。二、原條文第三項刪除，理由如下：(一)按公司最低資本額之規定，係要求公司於設立登記時，最低資本須達一定數額，方得設立。惟資本僅為一計算上不變之數額，與公司之現實財產並無必然等同之關係；同時資本額為公示資訊，交易相對人可透過登記主管機關之資訊網站得知該項資訊，作為交易時之判斷；再者，公司申請設立登記時，其資本額仍應先經會計師查核簽證，如資本額不敷設立成本，造成資產不足抵償負債時，董事會應即聲請宣告破產，公司登記機關依本法第三百八十八條規定將不予登記。爰此，資本額如足敷公司設立時之開辦成本即准予設立，有助於公司迅速成立，亦無閒置資金之弊，該數額宜由個別公司因應其開辦成本而自行決定，尚不宜由主管機關統一訂定最低資本額。(二)又依據世界銀行公元二○○八年九月發布「二○○九全球經商環境報告」中有關「最低資本額」之調查指出，我國「最低資本額」占國人平均所得百分之一百以上，於世界排名為第一五七名。為改善我國經商環境，促進企業開辦，公司資本額應以經會計師查核簽證認定資本額足敷設立成本即可，爰刪除第三項。三、原條文第四項至第九項，移列為修正條文第三項至第八項，內容未修正。
+> 釋：一、第一項及第二項未修正。二、公司向證券主管機關申請辦理公開發行程序，成為公開發行公司後，如欲停止公開發行，需經何種程序，公司法尚無明文規定，並考量一旦停止公開發行，財務狀況將回復至不公開之情形，對投資人權益影響甚鉅，爰於第三項明定須經股東會特別決議；另為與證券交易法第三條所定「主管機關」之用語一致，將「證券管理機關」修正為「證券主管機關」。三、增訂第四項。考量公開發行股票之公司召開股東會時，股東出席率較難達到已發行股份總數三分之二，為避免因此無法作成決議，爰明定公開發行股票之公司，出席股東之股份總數不足第三項定額者，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意行之，較有彈性。四、增訂第五項。基於公司公開發行係自願，如其無法履行證券主管機關之法令規範，應賦予證券主管機關得停止其股票公開發行之法據，俾利證券主管機關之管理。五、原條文第三項但書有關公營事業之公開發行，由該公營事業之主管機關（指股權主管機關）專案核定之規定，酌予修正，並移列為第六項；公營事業之停止公開發行，亦併同納入規範，且經該公營事業之主管機關專案核定後，應依第三項規定，向證券主管機關申請之。六、原條文第四項移列為第七項。鑒於商譽並非一種可以隨時充作現物之財產出資，僅係公司合併因支付成本高於其資產公平價值而產生會計處理之科目，不宜作為出資標的，爰刪除「商譽」二字。七、原條文第五項至第七項移列為第八項至第十項，內容未修正。八、為符合授權明確性原則，明定證券主管機關得就公開發行股票公司之股票發行價格之決定方法，另為規定；又為與證券交易法第三條「主管機關」之用語一致，爰修正原條文第八項，並移列為第十一項。
 
 * 157 公司發行特別股時，應就左列各款於章程中定之：一、特別股分派股息及紅利之順序、定額或定率。二、特別股分派公司賸餘財產之順序、定額或定率。三、特別股之股東行使表決權之順序、限制或無表決權。四、特別股權利、義務之其他事項。
 
 > 釋：一、第二款「剩」字修正為「賸」字。二、依本條第三款及第一百七十九條規定以及解釋，公司不得以章程訂定無表決權之特別股，惟實務上公司多有所建議，且從理論上言，無表決權股份之發行，可便利公司籌募資金；蓋股東有所謂企業股東、投資股東、投機股東三者之分。投資股東取得股票，目的祇在投入資本，賺取股息紅利等，故其所關心者，唯股息紅利之多寡，對於股東表決權之有無，並不介意，公司發給股息紅利或其他權利，有高度定額或定率之優先股份，即更滿足此類股東之希望，而毋庸給以表決權，以使公司經營可趨簡易，此乃股份有限公司特色之一，即「企業所有與企業經營分離」之典型表現。再就實際利害關係言之，公司法第一百五十九條第一項既規定「公司已發行特別股者，其章程之變更，如有損害特別股股東之權利時，除．．．．外，並應經特別股股東會之決議」，則特別股股東依章程之訂定，於普通股東會無表決權，要無重大實害之可言。爰於第三款增訂特別股之股東「無表決權」之規定。
 
-* 158 公司發行之特別股，得以盈餘或發行新股所得之股款收回之。但不得損害特別股股東按照章程應有之權利。
+* 158 公司發行之特別股，得收回之。但不得損害特別股股東按照章程應有之權利。
+
+> 釋：按公司收回發行之特別股，依原規定，僅得以盈餘或發行新股所得股款收回，尚不得以法條所列舉者以外之其他款項收回。此種限制，對企業之財務運用，欠缺彈性；又公司以何種財源收回特別股，允屬公司內部自治事項，宜由公司自行決定，毋庸以法律限制之，以利公司彈性運用，爰刪除「以盈餘或發行新股所得之股款」等文字。至於特別股應收回之條件、期限與公司應給付對價之種類及數額等事項，仍應依公司法第一百五十七條第四款規定於章程中訂定之，公司並應據以辦理，併此敘明。
 
 * 159 公司已發行特別股者，其章程之變更如有損害特別股股東之權利時，除應有代表已發行股份總數三分之二以上股東出席之股東會，以出席股東表決權過半數之決議為之外，並應經特別股股東會之決議。公開發行股票之公司，出席股東之股份總數不足前項定額者，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意行之，並應經特別股股東會之決議。前二項出席股東股份總數及表決權數，章程有較高之規定者，從其規定。特別股股東會準用關於股東會之規定。
 
@@ -546,9 +548,13 @@
 
 > 釋：一、本條新增。二、參考國外公司針對員工發行員工認股權相關規定，明定第一項。三、由於員工認股權憑證是基於該員工對公司之貢獻，明定第二項。
 
-* 168 公司非依股東會決議減少資本，不得銷除其股份；減少資本，應依股東所持股份比例減少之。但本法或其他法律另有規定者，不在此限。公司負責人違反前項規定銷除股份者，各處新臺幣二萬元以上十萬元以下罰鍰。
+* 167.3 公司依第一百六十七條之一或其他法律規定收買自己之股份轉讓於員工者，得限制員工在一定期間內不得轉讓。但其期間最長不得超過二年。
 
-> 釋：一、公司未經股東會決議即逕行減少資本，影響股東、債權人及第三人之權益甚鉅，爰修正第一項。又本法規定之減資如第一百六十七條，或其他法律另有規定者，應予以排除，爰增訂但書。二、按公司銷除股份，須申請減資變更登記，因此，公司登記主管機關受理時，發現有違反第一項規定，不得准其銷除股份外，並改處行政罰，又罰鍰數額酌作調整。
+> 釋：一、本條新增。二、按股份以自由轉讓為原則，除非法有明文（例如第二百六十七條第六項），否則，不得限制員工轉讓持股。企業為激勵員工而發給員工庫藏股，無非希望員工長期持有並繼續留在公司服務，如員工取得股份後立即轉讓，將喪失用以激勵並留住員工之原意，爰參酌美國等先進國家有關「員工限制股」之精神，明定公司依第一百六十七條之一或其他法律規定（例如證券交易法第二十八條之二）收買自己之股份轉讓給員工，得限制員工在一定期間內不得轉讓，並規定其期限最長不得超過二年。
+
+* 168 公司非依股東會決議減少資本，不得銷除其股份；減少資本，應依股東所持股份比例減少之。但本法或其他法律另有規定者，不在此限。公司減少資本，得以現金以外財產退還股款；其退還之財產及抵充之數額，應經股東會決議，並經該收受財產股東之同意。前項財產之價值及抵充之數額，董事會應於股東會前，送交會計師查核簽證。公司負責人違反前三項規定者，各處新臺幣二萬元以上十萬元以下罰鍰。
+
+> 釋：一、第一項未修正。二、依第一百五十六條規定，股東出資之種類除現金外，得以對公司所有之貨幣債權，或公司所需之技術抵充之。再者，為使公司靈活運用資本，以因應企業經營之實際需求，爰明定公司減資退還股款，得以現金以外財產為之。惟為保障股東權益，並落實公司治理，退還之財產及抵充之數額，應經股東會決議，並經該收受財產股東之同意，爰增訂第二項。三、為確保退還財產估價之合理，該財產之價值及抵充之數額，董事會應於股東會前送交會計師查核簽證，爰增訂第三項。四、原條文第二項移列第四項。公司負責人違反增訂之第二項或第三項規定者，亦應處以罰鍰，爰將「前項」修正為「前三項」。
 
 * 168.1 公司為彌補虧損，於會計年度終了前，有減少資本及增加資本之必要者，董事會應將財務報表及虧損撥補之議案，於股東會開會三十日前交監察人查核後，提請股東會決議。第二百二十九條至第二百三十一條之規定，於依前項規定提請股東臨時會決議時，準用之。
 
@@ -582,17 +588,17 @@
 
 * 176 無記名股票之股東，非於股東會開會五日前，將其股票交存公司，不得出席。
 
-* 177 股東得於每次股東會，出具公司印發之委託書，載明授權範圍，委託代理人，出席股東會。除信託事業或經證券主管機關核准之股務代理機構外，一人同時受二人以上股東委託時，其代理之表決權不得超過已發行股份總數表決權之百分之三，超過時其超過之表決權，不予計算。一股東以出具一委託書，並以委託一人為限，應於股東會開會五日前送達公司，委託書有重複時，以最先送達者為準。但聲明撤銷前委託者，不在此限。委託書送達公司後，股東欲親自出席股東會者，至遲應於股東會開會前一日，以書面向公司為撤銷委託之通知；逾期撤銷者，以委託代理人出席行使之表決權為準。
+* 177 股東得於每次股東會，出具公司印發之委託書，載明授權範圍，委託代理人，出席股東會。除信託事業或經證券主管機關核准之股務代理機構外，一人同時受二人以上股東委託時，其代理之表決權不得超過已發行股份總數表決權之百分之三，超過時其超過之表決權，不予計算。一股東以出具一委託書，並以委託一人為限，應於股東會開會五日前送達公司，委託書有重複時，以最先送達者為準。但聲明撤銷前委託者，不在此限。委託書送達公司後，股東欲親自出席股東會或欲以書面或電子方式行使表決權者，應於股東會開會二日前，以書面向公司為撤銷委託之通知；逾期撤銷者，以委託代理人出席行使之表決權為準。
 
-> 釋：為避免股務作業之不便與爭議，股東之委託書送達公司後，欲親自出席股會時，至遲應於股東會開會前一日撤銷委託，不得於股東會召開當日撤銷委託，其逾期撤銷委託者，以委託代理人出席行使之表決權為準，爰增訂第四項。
+> 釋：一、第一項至第三項未修正。二、依原規定，委託書送達公司後，股東欲親自出席股東會者，至遲應於股東會開會前一日，為撤銷委託之通知。股東於股東會開會前一日為撤銷委託之通知，股務作業處理上，時間甚為緊迫，爰修正第四項，將「開會前一日」修正為「開會二日前」，以利實務運作。並於同項增加規範委託書送達公司後，股東欲以書面或電子方式行使表決權者，亦應於股東會開會二日前，為撤銷委託之通知。
 
 * 177.1 公司召開股東會時，得採行以書面或電子方式行使其表決權；其以書面或電子方式行使表決權時，其行使方法應載明於股東會召集通知。但證券主管機關應視公司規模、股東人數與結構及其他必要情況，命其將電子方式列為表決權行使管道之一。前項以書面或電子方式行使表決權之股東，視為親自出席股東會。但就該次股東會之臨時動議及原議案之修正，視為棄權。
 
 > 釋：一、為解決上市櫃公司同日召開股東會造成大部分小股東喪失自身權益問題，我國應透過落實電子化通訊投票制度來保障投資人權益，進而健全市場發展。二、尤其參考先進國家經驗，電子化通訊投票有助於提升公司治理與資訊透明度，對我國資本市場長遠發展有其必要。三、爰於第一項增列但書，要求證券主管機關應視公司規模、股東人數與結構及其他必要情況，命其將電子方式列為表決權行使管道之一。
 
-* 177.2 股東以書面或電子方式行使表決權者，其意思表示應於股東會開會五日前送達公司，意思表示有重複時，以最先送達者為準。但聲明撤銷前意思表示者，不在此限。股東以書面或電子方式行使表決權後，欲親自出席股東會者，至遲應於股東會開會前一日，以與行使表決權相同之方式撤銷前項行使表決權之意思表示；逾期撤銷者，以書面或電子方式行使之表決權為準。股東以書面或電子方式行使表決權，並以委託書委託代理人出席股東會者，以委託代理人出席行使之表決權為準。
+* 177.2 股東以書面或電子方式行使表決權者，其意思表示應於股東會開會二日前送達公司，意思表示有重複時，以最先送達者為準。但聲明撤銷前意思表示者，不在此限。股東以書面或電子方式行使表決權後，欲親自出席股東會者，應於股東會開會二日前，以與行使表決權相同之方式撤銷前項行使表決權之意思表示；逾期撤銷者，以書面或電子方式行使之表決權為準。股東以書面或電子方式行使表決權，並以委託書委託代理人出席股東會者，以委託代理人出席行使之表決權為準。
 
-> 釋：一、本條新增。二、股東如以書面或依電子簽章法規定之電子方式行使股東表決權，宜明定其意思表示送達公司之時間，俾資明確，爰為第一項規定。三、股東以書面或電子方式行使股東表決權後，欲親自出席股東會者，宜於股東會開會前一定時間內為撤銷已行使表決權之意思表示，並明定逾期撤銷之效力，以避免股務作業之不便與爭議，爰為第二項規定。四、股東以書面或電子方式行使表決權並以委託書委託代理人出席股東會時，以何者為準，宜予明定，鑒於股東已委託代理人出席，且亦可能涉及委託書徵求人徵得股數之計算，故以委託代理人出席行使之表決權為準，爰為第三項規定。
+> 釋：一、鑒於外資股東係透過保管銀行行使股東權利，外資股東之意思表示，實務上，約在股東會開會前五日，甚至前二日始能送達。依原規定，股東之意思表示應在股東會開會五日前送達公司，常造成外資股東之意思表示，無法被納入。爰將第一項有關以書面或電子方式行使表決權者，其意思表示送達公司之時間，由「開會五日前」修正為「開會二日前」，俾利外資股東行使表決權。二、依原規定，股東以書面或電子方式行使表決權後，欲親自出席股東會者，至遲應於股東會開會前一日撤銷前意思表示。惟股東於股東會開會前一日撤銷前意思表示，股務作業處理上，時間甚為緊迫，爰將第二項「開會前一日」修正為「開會二日前」，以利實務運作。三、第三項未修正。
 
 * 177.3 公開發行股票之公司召開股東會，應編製股東會議事手冊，並應於股東會開會前，將議事手冊及其他會議相關資料公告。前項公告之時間、方式、議事手冊應記載之主要事項及其他應遵行事項之辦法，由證券管理機關定之。
 
@@ -616,9 +622,9 @@
 
 > 釋：一、本條新增。二、按現行公司董事會以外所召集之股東會，其主席人選為何，常滋生疑義，為防杜紛爭，爰於第一項明定之。三、原條文就股東會之散會程序並無規定，易流為主席之恣意行為，無法保障股東之權益，尤其股東會開會時，主席違反公司所定之議事規則任意宣布散會，再擇期開會，不但耗費諸多社會成本，亦影響國內經濟秩序，爰於第二項明定之。
 
-* 183 股東會之議決事項，應作成議事錄，由主席簽名或蓋章，並於會後二十日內，將議事錄分發各股東。前項議事錄之製作及分發，得以電子方式為之。公開發行股票之公司對於持有記名股票未滿一千股之股東，第一項議事錄之分發，得以公告方式為之。議事錄應記載會議之年、月、日、場所、主席姓名、決議方法、議事經過之要領及其結果，在公司存續期間，應永久保存。出席股東之簽名簿及代理出席之委託書，其保存期限至少為一年。但經股東依第一百八十九條提起訴訟者，應保存至訴訟終結為止。代表公司之董事，違反第一項、第四項或前項規定者，處新臺幣一萬元以上五萬元以下罰鍰。
+* 183 股東會之議決事項，應作成議事錄，由主席簽名或蓋章，並於會後二十日內，將議事錄分發各股東。前項議事錄之製作及分發，得以電子方式為之。第一項議事錄之分發，公開發行股票之公司，得以公告方式為之。議事錄應記載會議之年、月、日、場所、主席姓名、決議方法、議事經過之要領及其結果，在公司存續期間，應永久保存。出席股東之簽名簿及代理出席之委託書，其保存期限至少為一年。但經股東依第一百八十九條提起訴訟者，應保存至訴訟終結為止。代表公司之董事，違反第一項、第四項或前項規定者，處新臺幣一萬元以上五萬元以下罰鍰。
 
-> 釋：一、第一項未修正。二、為因應電子科技之進步，節省公司通知事務之成本，議事錄之製作及分發，得依電子簽章法規定之電子方式為之，爰增訂第二項。三、原條文第二項至第五項移列為第三項至第六項，並配合酌作文字修正。
+> 釋：一、第一項及第二項未修正。二、為節省公開發行股票公司辦理議事錄分發作業之成本及響應環保無紙化政策，並考量公開資訊觀測站之建置已臻完善，公開發行股票公司分發議事錄予股東時，不論股東持股多寡，均得以公告方式為之，爰修正第三項。三、第四項至第六項未修正。
 
 * 184 股東會得查核董事會造具之表冊、監察人之報告，並決議盈餘分派或虧損撥補。執行前項查核時，股東會得選任檢查人。對於前二項查核有妨礙、拒絕或規避之行為者，各處新臺幣二萬元以上十萬元以下罰鍰。
 
@@ -708,9 +714,9 @@
 
 > 釋：一、第二項所稱「召集」，實為「召集開會」之意思，爰修正為「召開」，以臻明確。為配合第一百九十九條之一之增訂，並增列「並決議自任期屆滿時解任者」。二、依原條文規定，董事如係於上屆董事任期屆滿前改選者，須於上屆董事任滿後十五日內始得召開第一次董事會，據此，董事長、副董事長、常務董事無法於任期屆滿前改選，銜接視事，公司運作相當不便，為利新、舊任交接，爰增訂第三項。三、原條文第三、四項移列為第四、五項。
 
-* 204 董事會之召集，應載明事由，於七日前通知各董事及監察人。但有緊急情事時，得隨時召集之。
+* 204 董事會之召集，應載明事由，於七日前通知各董事及監察人。但有緊急情事時，得隨時召集之。前項召集之通知，經相對人同意者，得以電子方式為之。
 
-> 釋：第二百十八條之二修正後，賦予監察人有出席董事會表示意見之權利，故召集董事會時，當然亦應對監察人為通知，爰予明定，並酌作標點符號之修正。
+> 釋：一、第一項未修正。二、因應電子科技之進步，董事會之召集通知，比照股東會之召集通知，經相對人同意者，得以電子方式為之，爰增訂第二項。
 
 * 205 董事會開會時，董事應親自出席。但公司章程訂定得由其他董事代理者，不在此限。董事會開會時，如以視訊會議為之，其董事以視訊參與會議者，視為親自出席。董事委託其他董事代理出席董事會時，應於每次出具委託書，並列舉召集事由之授權範圍。前項代理人，以受一人之委託為限。董事居住國外者，得以書面委託居住國內之其他股東，經常代理出席董事會。前項代理，應向主管機關申請登記，變更時，亦同。
 
@@ -820,9 +826,9 @@
 
 * 229 董事會所造具之各項表冊與監察人之報告書，應於股東常會開會十日前，備置於本公司，股東得隨時查閱，並得偕同其所委託之律師或會計師查閱。
 
-* 230 董事會應將其所造具之各項表冊，提出於股東常會請求承認，經股東常會承認後，董事會應將財務報表及盈餘分派或虧損撥補之決議，分發各股東。公開發行股票之公司對於持有記名股票未滿一千股之股東，前項財務報表及盈餘分派或虧損撥補決議之分發各股東，得以公告方式為之。第一項表冊及決議，公司債權人得要求給予或抄錄。代表公司之董事，違反第一項規定不為分發者，處新臺幣一萬元以上五萬元以下罰鍰。
+* 230 董事會應將其所造具之各項表冊，提出於股東常會請求承認，經股東常會承認後，董事會應將財務報表及盈餘分派或虧損撥補之決議，分發各股東。前項財務報表及盈餘分派或虧損撥補決議之分發，公開發行股票之公司，得以公告方式為之。第一項表冊及決議，公司債權人得要求給予或抄錄。代表公司之董事，違反第一項規定不為分發者，處新臺幣一萬元以上五萬元以下罰鍰。
 
-> 釋：一、按財務報表係包含資產負債表等項，爰修正第一項。二、為簡化公開發行股票之公司分發財務報表之程序，對於未足一千股之股東，得以彈性處理，爰增訂第二項。並將原條文第二項酌作文字修正，移列為第三項。三、修正原條文第三項，罰鍰數額酌予調整，並移列為第四項。
+> 釋：一、第一項未修正。二、為節省公開發行股票公司辦理財務報表等分發作業之成本及響應環保無紙化政策並考量公開資訊觀測站之建置已臻完善，公開發行股票公司分發財務報表及盈餘分派或虧損撥補決議給股東時，不論股東持股多寡，均得以公告方式為之，爰修正第二項。三、第三項及第四項未修正。
 
 * 231 各項表冊經股東會決議承認後，視為公司已解除董事及監察人之責任。但董事或監察人有不法行為者，不在此限。
 
@@ -958,9 +964,9 @@
 
 * 266 公司依第一百五十六條第二項分次發行新股，或依第二百七十八條第二項發行增資後之新股，均依本節之規定。公司發行新股時，應由董事會以董事三分之二以上之出席，及出席董事過半數同意之決議行之。第一百四十一條、第一百四十二條之規定，於發行新股準用之。
 
-* 267 公司發行新股時，除經目的事業中央主管機關專案核定者外，應保留發行新股總數百分之十至十五之股份由公司員工承購。公營事業經該公營事業之主管機關專案核定者，得保留發行新股由員工承購；其保留股份，不得超過發行新股總數百分之十。公司發行新股時，除依前二項保留者外，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利；原有股東持有股份按比例不足分認一新股者，得合併共同認購或歸併一人認購；原有股東未認購者，得公開發行或洽由特定人認購。前三項新股認購權利，除保留由員工承購者外，得與原有股份分離而獨立轉讓。第一項、第二項所定保留員工承購股份之規定，於以公積或資產增值抵充，核發新股予原有股東者，不適用之。公司對員工依第一項、第二項承購之股份，得限制在一定期間內不得轉讓。但其期間最長不得超過二年。本條規定，對因合併他公司、分割、公司重整或依第一百六十七條之二、第二百六十二條、第二百六十八條之一第一項而增發新股者，不適用之。公司負責人違反第一項規定者，各處新臺幣二萬元以上十萬元以下罰鍰。
+* 267 公司發行新股時，除經目的事業中央主管機關專案核定者外，應保留發行新股總數百分之十至十五之股份由公司員工承購。公營事業經該公營事業之主管機關專案核定者，得保留發行新股由員工承購；其保留股份，不得超過發行新股總數百分之十。公司發行新股時，除依前二項保留者外，應公告及通知原有股東，按照原有股份比例儘先分認，並聲明逾期不認購者，喪失其權利；原有股東持有股份按比例不足分認一新股者，得合併共同認購或歸併一人認購；原有股東未認購者，得公開發行或洽由特定人認購。前三項新股認購權利，除保留由員工承購者外，得與原有股份分離而獨立轉讓。第一項、第二項所定保留員工承購股份之規定，於以公積抵充，核發新股予原有股東者，不適用之。公司對員工依第一項、第二項承購之股份，得限制在一定期間內不得轉讓。但其期間最長不得超過二年。本條規定，對因合併他公司、分割、公司重整或依第一百六十七條之二、第二百六十二條、第二百六十八條之一第一項而增發新股者，不適用之。公開發行股票之公司發行限制員工權利新股者，不適用第一項至第六項之規定，應有代表已發行股份總數三分之二以上股東出席之股東會，以出席股東表決權過半數之同意行之。出席股東之股份總數不足前項定額者，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意行之。公開發行股票之公司依前二項規定發行新股者，其發行數量、發行價格、發行條件及其他應遵行事項，由證券主管機關定之。公司負責人違反第一項規定者，各處新臺幣二萬元以上十萬元以下罰鍰。
 
-> 釋：一、修正第七項。二、增列公司依重整計畫發行新股時，也可以排除員工及原有股東的優先承購權。因此，未來其要法院裁定准予公司重整，而重整公司關係人會議通過重整計畫發行新股，重整人即可依計畫內容逕行尋求認購者，無需再費時探詢公司員工及原有股東是否優先承購，藉以彰顯社會正義，同時也提高債權人及投資者的投資意願，俾利重整程序的進行。
+> 釋：一、第一項至第四項未修正。二、按本法於九十年十一月十二日修正時，刪除第二百三十八條有關資本公積之規定，係鑒於資本公積之規定，核屬商業會計處理問題，何種金額應累積為資本公積，應回歸商業會計法令處理。九十年十一月十二日修正前，資產重估增值應累積為資本公積，惟資產重估增值係屬未實現利得，其性質與資本公積不同。按未實現利得係由資產重估增值而產生，資本公積係由資本帳戶之交易而產生，故在財務會計觀點上，資產重估增值不應列為資本公積。商業會計法業於九十五年五月二十四日修正第五十二條，將原列於資本公積項下之資產重估增值準備改列為業主權益項下之未實現重估增值。又本法之增資發行新股，限於現金增資、盈餘轉增資及資本公積轉增資三種。基此，自無再以資產重估增值發行新股之餘地，爰第五項刪除「或資產增值」等文字。三、第六項及第七項未修正。四、增訂第八項。參酌國際趨勢，明定公開發行股票之公司發行限制員工權利新股者，應經股東會特別決議通過。又鑒於公開發行股票之公司所發行限制員工權利股票，係為激勵員工績效達成之特殊性，爰明定排除第一項至第六項所定員工承購權相關規定之適用。五、增訂第九項。考量公開發行股票之公司召開股東會時，股東出席率較難達到已發行股份總數三分之二，為避免因此無法作成決議，爰明定不足第八項定額者，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意行之，較有彈性。六、增訂第十項。授權證券主管機關對發行數量、發行價格、發行條件及其他應遵行事項，得另為規定。七、原條文第八項移列第十一項，內容未修正。
 
 * 268 公司發行新股時，除由原有股東及員工全部認足或由特定人協議認購而不公開發行者外，應將左列事項，申請證券管理機關核准，公開發行：一、公司名稱。二、原定股份總數、已發行數額及金額。三、發行新股總數、每股金額及其他發行條件。四、證券管理機關規定之財務報表。五、增資計畫。六、發行特別股者，其種類、股數、每股金額及第一百五十七條各款事項。七、發行認股權憑證或附認股權特別股者，其可認購股份數額及其認股辦法。八、代收股款之銀行或郵局名稱及地址。九、有承銷或代銷機構者，其名稱及約定事項。十、發行新股決議之議事錄。十一、證券管理機關規定之其他事項。公司就前項各款事項有變更時，應即向證券管理機關申請更正；公司負責人不為申請更正者，由證券管理機關各處新臺幣一萬元以上五萬元以下罰鍰。第一項第二款至第四款及第六款，由會計師查核簽證；第八款、第九款，由律師查核簽證。第一項、第二項規定，對於第二百六十七條第五項之發行新股，不適用之。前項發行新股之股數、認股權憑證或附認股權特別股可認購股份數額加計已發行股份總數、已發行轉換公司債可轉換股份總數、已發行附認股權公司債可認購股份總數、已發行附認股權特別股可認購股份總數及已發行認股權憑證可認購股份總數，如超過公司章程所定股份總數時，應先完成變更章程增加資本額後，始得為之。
 
