--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -672,9 +672,9 @@
 
 > 釋：一、第一項為配合證券交易法第二十六條公開發行股票之公司董事任期中轉讓持股超過選任當時股份總數二分之一，當然解任，並酌作文字修正。二、對公司於董事任期屆滿前提前改選，則自選任時至就任此一期間轉讓股份，或於股東會召開前之過戶閉鎖期間轉讓持股之情形，原條文均未予規範，顯有缺失，爰增訂第三項。
 
-* 197.1 董事之股份設定或解除質權者，應即通知公司，公司應於質權設定或解除後十五日內，將其質權變動情形，向主管機關申報並公告之。但公開發行股票之公司，證券管理機關另有規定者，不在此限。
+* 197.1 董事之股份設定或解除質權者，應即通知公司，公司應於質權設定或解除後十五日內，將其質權變動情形，向主管機關申報並公告之。但公開發行股票之公司，證券管理機關另有規定者，不在此限。公開發行股票之公司董事以股份設定質權超過選任當時所持有之公司股份數額二分之一時，其超過之股份不得行使表決權，不算入已出席股東之表決權數。
 
-> 釋：一、本條新增。二、董事將其股份設定或解除質權之情形，應予揭露，爰明定董事應即通知公司，由公司向主管機關申報並公告之。惟公開發行股票之公司，證券管理機關另有規定時，從其規定。
+> 釋：一、本條第二項係屬增訂。二、發生財務困難之上市、上櫃公司，其董監事多將持股質押以求護盤，使持股質押比例往往較一般公司高；但股價下跌時，為免遭銀行催補擔保品，又再大肆借貸力守股價，惡性循環之結果導致公司財務急遽惡化，損害投資大眾權益。為健全資本市場與強化公司治理，實有必要對設質比重過高之董事、監察人加強控管。特修正「公司法」第一百九十七條之一，若公開發行股票之公司董事以股份設定質權超過選任當時所持有之公司股份數額二分之一時，其超過之股份不得行使表決權，不算入已出席股東之表決權數。藉此杜絕企業主炒作股票之動機與歪風，及防止董監事信用過度膨脹、避免多重授信。
 
 * 198 股東會選任董事時，除公司章程另有規定外，每一股份有與應選出董事人數相同之選舉權，得集中選舉一人，或分配選舉數人，由所得選票代表選舉權較多者，當選為董事。第一百七十八條之規定，對於前項選舉權，不適用之。
 
